# musashi-wasm

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEBUGGING_NOTES.md  DEBUG_MEMTRACE_BUG.md  EXCEPTION_FIXES.md  LOCAL_DEVELOPMENT.md  MAINTAINERS_MEMORY_MAPPING.md  Makefile  PERFETTO_MEMORY_ANALYSIS.md  PR_BODY.md  PR_PLAN.md  README.md  TEST_AUDIT_REPORT.md  TODO.md  branch-protection.json  build.fish  build.sh  build_perfetto_wasm_simple.sh  build_protobuf_wasm.sh  build_wasm_simple.sh  debug_privilege.c  debug_rte.c  eslint.config.mjs  example_perfetto_trace.c  example_trace.c  m68k.h  m68k_in.c  m68k_memory_bridge.cc  m68k_perfetto.cc  m68k_perfetto.h  m68kconf.h  m68kcpu.c  (+26 more)
.github/: CODEOWNERS
.github/workflows/: ci-metrics.yml  ci.yml  native-ci.yml  npm-publish.yml  typescript-ci.yml  wasm-ci.yml
build_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  example_trace  test_exceptions  test_exceptions[1]_include.cmake  test_exceptions[1]_tests.cmake  test_fixture_example  test_fixture_example[1]_include.cmake  test_fixture_example[1]_tests.cmake  test_m68k  test_m68k[1]_include.cmake  test_m68k[1]_tests.cmake  test_myfunc  test_myfunc[1]_include.cmake  test_myfunc[1]_tests.cmake  test_singlestep  test_singlestep[1]_include.cmake  test_singlestep[1]_tests.cmake  test_vasm_binary  test_vasm_binary[1]_include.cmake  test_vasm_binary[1]_tests.cmake
build_test/Testing/Temporary/: CTestCostData.txt
docs/: step_trap_timeout_analysis.md
examples/: example_perfetto_trace.c  example_trace.c
musashi-fusion-repro/: minimal-illegal-repro.mjs  repro.mjs
musashi-wasm-test/: .gitignore  README.md  load-musashi.js  musashi-universal.out.mjs  musashi-universal.out.wasm  package-lock.json  package.json
musashi-wasm-test/tests/: BROWSER_COMPAT_TEST.md  browser_compat.test.js  cpu_execution_debug.test.js  debug_hooks.test.js  exports_from_build.test.js  hook_implementation_demo.test.js  hook_types.test.js  jsr_stack_write_repro.test.js  memtrace_cycles_bigint.test.js  memtrace_signature.test.js  perfetto_wasm.test.js  probe_filtering.test.js  register_enum_parity.test.js  singlestep_wasm.test.js  step_metadata_parity.test.js  universal_build.test.js  wasm_integration.test.js
npm-package/: .npmignore  README.md  index-browser.mjs  index.mjs  musashi-node.d.ts  package.json  perf.mjs  playwright.config.ts
npm-package/lib/: index.d.ts  perfetto.d.mts
npm-package/lib/core/: index.d.ts  index.d.ts.map  index.js  index.js.map  musashi-wrapper.d.ts  musashi-wrapper.d.ts.map  musashi-wrapper.js  musashi-wrapper.js.map  test-utils.d.ts  test-utils.d.ts.map  test-utils.js  test-utils.js.map  types.d.ts  types.d.ts.map
npm-package/lib/memory/: index.d.ts  index.js
npm-package/lib/wasm/: musashi-node-wrapper.d.mts  musashi-node-wrapper.d.ts  musashi-node-wrapper.js  musashi-node-wrapper.mjs
npm-package/scripts/: build-local.sh  generate-wrapper.js
npm-package/test/: basic.test.js  fusion-divergence.test.mjs  integration.mjs  package-consumer.mjs  package-files.test.js  register-enum.test.js  register-from-name.test.js
npm-package/test/assets/: fusion_repro_template.mjs
npm-package/test/browser/: index.html  main.js  playwright.spec.ts
scripts/: memtrace-repro.mjs  run-with-timeout.mjs  setup-branch-protection.sh
test-results/: fusion-diagnostic-1758265111056-wasm-test.json  fusion-diagnostic-1758265486360-wasm-test.json
tests/: debug_test_failures.cpp  extra_byte_min.cpp  fusion_divergence_repro.cpp  jsr_stack_write_test.js  m68k_test_base.h  m68k_test_common.h  perfetto_test_program.s  singlestep_test.cpp  singlestep_test.h  test_call_session.cpp  test_entry_point.cpp  test_example_new.cpp  test_exceptions.cpp  test_helpers.h  test_m68k.cpp  test_mergesort.cpp  test_mergesort.s  test_mergesort_trace.cpp  test_mergesort_verified.cpp  test_myfunc.cpp  test_perfetto.cpp  test_program.s  test_region_bounds.cpp  test_singlestep.cpp  test_vasm_binary.cpp  test_wasm_setjmp_smoke.mjs
